--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML com CSS</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Voluptates est maiores, esse non dolores obcaecati pariatur fugit nobis, 
+                recusandae sapiente illum, iste odit numquam consequuntur vel incidunt enim earum soluta! </p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>CCurso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Quia molestias, dolor quidem debitis animi voluptatem quaerat laudantium. 
+                Ea, harum corporis fugiat deserunt eaque officiis repellat porro, suscipit iste, illo voluptatibus.</p>
         </article>
     </main>
 </body>
