--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 recusandae sapiente illum, iste odit numquam consequuntur vel incidunt enim earum soluta! </p>
         </article>
         <article>
-            <h2>CCurso de JavaScript</h2>
+            <h2>Curso de JavaScript</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                 Quia molestias, dolor quidem debitis animi voluptatem quaerat laudantium. 
                 Ea, harum corporis fugiat deserunt eaque officiis repellat porro, suscipit iste, illo voluptatibus.</p>
