alteração no site 21/07

--- a/index.html
+++ b/index.html
@@ -10,18 +10,24 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML com CSS</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                Voluptates est maiores, esse non dolores obcaecati pariatur fugit nobis, 
-                recusandae sapiente illum, iste odit numquam consequuntur vel incidunt enim earum soluta! </p>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
+            <p>O HTML é uma linguagem de marcação para a criação de sites. 
+            Atualmente ela usa a semântica dos elemtentos para criar o conteúdo da página Web.
+            Com o CSS, criamos as configurações visuais
+            que um site vai ter. </p>
+            <p><a href="curso-HTML.html">Acesse o curso HTML</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                Quia molestias, dolor quidem debitis animi voluptatem quaerat laudantium. 
-                Ea, harum corporis fugiat deserunt eaque officiis repellat porro, suscipit iste, illo voluptatibus.</p>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JavaScript">
+            <p>JavaScript é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes.
+            Os códigos em JS são executados dentro do navegador e dão acesso aos 
+            elementos HTML por do DOM.</p>
+            <p><a href="curso-JavaScript.html">Acesse o curso JavaScript</a></p>
         </article>
     </main>
 </body>
