--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
             <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>O HTML é uma linguagem de marcação para a criação de sites. 
             Atualmente ela usa a semântica dos elemtentos para criar o conteúdo da página Web.
-            Com o CSS, criamos as configurações visuais
-            que um site vai ter. </p>
+            Com o CSS, criamos as configurações visuais que um site vai ter. </p>
             <p><a href="curso-HTML.html">Acesse o curso HTML</a></p>
         </article>
         <article>
